# quant-vibecode

./: .env.example  .gitignore  Dockerfile  README.md  ai_analyst.py  app_frontend.py  data_watcher.py  diagnose.py  engine_backtest.py  engine_regime.py  macro_rebalancer.py  pipeline_data.py  portfolio_manager.py  requirements.txt
cpp/: README.md
cpp/wasm/: CMakeLists.txt  README.md  build_wasm.bat  sector_heatmap.cpp
web/: index.html  index.js  style.css
